# IO-Benchmarker

./: CMakeLists.txt  README.md  main.cpp
Examples/: file1.docx  file2.txt
include/: Reader.hpp  helpers.hpp
src/: Reader.cpp
